--- a/src/app/components/show-tasks/show-tasks.component.html
+++ b/src/app/components/show-tasks/show-tasks.component.html
@@ -1,50 +1,70 @@
-<table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
+<div class="table-main-menu">
+  <mat-form-field class="input-form">
+    <mat-label>Find Field to Search</mat-label>
+    <mat-select #nameField>
+      <mat-option value="id">id</mat-option>
+      <mat-option value="taskName">taskName</mat-option>
+      <mat-option value="responsible">responsible</mat-option>
+    </mat-select>
+  </mat-form-field>
+  <mat-form-field class="input-form">
+    <mat-label>Campo</mat-label>
+    <input #valueOfSearch matInput>
+  </mat-form-field>
+  <button (click)="find(valueOfSearch.value, nameField.value)" style="margin:5px;top: -15px;" mat-raised-button>search</button>
+</div>
+<div class="table-main-menu">
+  <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
 
-  <ng-container matColumnDef="id">
-    <th mat-header-cell *matHeaderCellDef> Id </th>
-    <td mat-cell *matCellDef="let element"> {{element.id}} </td>
-  </ng-container>
+    <ng-container matColumnDef="id">
+      <th mat-header-cell *matHeaderCellDef> Id </th>
+      <td mat-cell *matCellDef="let element"> {{element.id}} </td>
+    </ng-container>
 
-  <ng-container matColumnDef="name">
-    <th mat-header-cell *matHeaderCellDef> Name </th>
-    <td mat-cell *matCellDef="let element"> {{element.name}} </td>
-  </ng-container>
+    <ng-container matColumnDef="name">
+      <th mat-header-cell *matHeaderCellDef> Name </th>
+      <td mat-cell *matCellDef="let element"> {{element.name}} </td>
+    </ng-container>
 
-  <ng-container matColumnDef="description">
-    <th mat-header-cell *matHeaderCellDef> Description </th>
-    <td mat-cell *matCellDef="let element"> {{element.description}} </td>
-  </ng-container>
+    <ng-container matColumnDef="description">
+      <th mat-header-cell *matHeaderCellDef> Description </th>
+      <td mat-cell *matCellDef="let element"> {{element.description}} </td>
+    </ng-container>
 
-  <ng-container matColumnDef="responsible">
-    <th mat-header-cell *matHeaderCellDef> Responsible </th>
-    <td mat-cell *matCellDef="let element"> {{element.responsible}} </td>
-  </ng-container>
+    <ng-container matColumnDef="responsible">
+      <th mat-header-cell *matHeaderCellDef> Responsible </th>
+      <td mat-cell *matCellDef="let element"> {{element.responsible}} </td>
+    </ng-container>
 
-  <ng-container matColumnDef="status">
-    <th mat-header-cell *matHeaderCellDef> Status </th>
-    <td mat-cell *matCellDef="let element"> {{element.status}} </td>
-  </ng-container>
+    <ng-container matColumnDef="status">
+      <th mat-header-cell *matHeaderCellDef> Status </th>
+      <td mat-cell *matCellDef="let element"> {{element.status}} </td>
+    </ng-container>
 
-  <ng-container matColumnDef="devTime">
-    <th mat-header-cell *matHeaderCellDef> Dev Time </th>
-    <td mat-cell *matCellDef="let element"> {{element.devTime}} </td>
-  </ng-container>
+    <ng-container matColumnDef="devTime">
+      <th mat-header-cell *matHeaderCellDef> Dev Time </th>
+      <td mat-cell *matCellDef="let element"> {{element.devTime}} </td>
+    </ng-container>
 
-  <ng-container matColumnDef="qaTime">
-    <th mat-header-cell *matHeaderCellDef> QA Time </th>
-    <td mat-cell *matCellDef="let element"> {{element.qaTime}} </td>
-  </ng-container>
+    <ng-container matColumnDef="qaTime">
+      <th mat-header-cell *matHeaderCellDef> QA Time </th>
+      <td mat-cell *matCellDef="let element"> {{element.qaTime}} </td>
+    </ng-container>
 
-  <ng-container matColumnDef="timeDone">
-    <th mat-header-cell *matHeaderCellDef> Time Done </th>
-    <td mat-cell *matCellDef="let element"> {{element.timeDone}} </td>
-  </ng-container>
+    <ng-container matColumnDef="timeDone">
+      <th mat-header-cell *matHeaderCellDef> Time Done </th>
+      <td mat-cell *matCellDef="let element"> {{element.timeDone}} </td>
+    </ng-container>
 
-  <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-  <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-</table>
+    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+    <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+  </table>
+</div>
 <section>
-  <div class="example-button-row">
-    <button mat-raised-button>Basic</button>
+  <div class="nextstep-button-row">
+    <div class="nextstep-center">
+      <button (click)="backPage()" style="margin:5px;" mat-raised-button>back</button>
+      <button (click)="nextPage()" style="margin:5px;" mat-raised-button>next</button>
+    </div>
   </div>
 </section>
